tests/infinite_type/fail_0.stderr
warning: unused import: `mpstthree::binary::cancel::cancel`
 --> tests/infinite_type/fail_0.rs:1:5
  |
1 | use mpstthree::binary::cancel::cancel;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `mpstthree::binary::choose::*`
 --> tests/infinite_type/fail_0.rs:2:5
  |
2 | use mpstthree::binary::choose::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::close::close`
 --> tests/infinite_type/fail_0.rs:3:5
  |
3 | use mpstthree::binary::close::close;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::fork::fork`
 --> tests/infinite_type/fail_0.rs:4:5
  |
4 | use mpstthree::binary::fork::fork;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::fork::fork_with_thread_id`
 --> tests/infinite_type/fail_0.rs:5:5
  |
5 | use mpstthree::binary::fork::fork_with_thread_id;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::offer::*`
 --> tests/infinite_type/fail_0.rs:6:5
  |
6 | use mpstthree::binary::offer::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::recv::recv`
 --> tests/infinite_type/fail_0.rs:7:5
  |
7 | use mpstthree::binary::recv::recv;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::select::select_mut`
 --> tests/infinite_type/fail_0.rs:8:5
  |
8 | use mpstthree::binary::select::select_mut;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::send::send`
 --> tests/infinite_type/fail_0.rs:9:5
  |
9 | use mpstthree::binary::send::send;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::binary::struct_trait::session::*`
  --> tests/infinite_type/fail_0.rs:13:5
   |
13 | use mpstthree::binary::struct_trait::session::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::choose`
  --> tests/infinite_type/fail_0.rs:14:5
   |
14 | use mpstthree::choose;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `mpstthree::offer`
  --> tests/infinite_type/fail_0.rs:15:5
   |
15 | use mpstthree::offer;
   |     ^^^^^^^^^^^^^^^^

warning: unused imports: `Rng`, `thread_rng`
  --> tests/infinite_type/fail_0.rs:17:12
   |
17 | use rand::{thread_rng, Rng};
   |            ^^^^^^^^^^  ^^^

warning: unused import: `std::boxed::Box`
  --> tests/infinite_type/fail_0.rs:18:5
   |
18 | use std::boxed::Box;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `std::error::Error`
  --> tests/infinite_type/fail_0.rs:19:5
   |
19 | use std::error::Error;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::mem`
  --> tests/infinite_type/fail_0.rs:21:5
   |
21 | use std::mem;
   |     ^^^^^^^^

warning: unused import: `std::sync::mpsc`
  --> tests/infinite_type/fail_0.rs:22:5
   |
22 | use std::sync::mpsc;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `std::thread::sleep`
  --> tests/infinite_type/fail_0.rs:23:5
   |
23 | use std::thread::sleep;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
  --> tests/infinite_type/fail_0.rs:24:5
   |
24 | use std::time::Duration;
   |     ^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/infinite_type/fail_0.rs:1:1
   |
1  | / use mpstthree::binary::cancel::cancel;
2  | | use mpstthree::binary::choose::*;
3  | | use mpstthree::binary::close::close;
4  | | use mpstthree::binary::fork::fork;
...  |
34 | | #[allow(dead_code)]
35 | | type NiceCalcServer2<N> = Recv<CalcOp2<N>, End>;
   | |________________________________________________^ consider adding a `main` function to `$DIR/tests/infinite_type/fail_0.rs`

error[E0275]: overflow evaluating the requirement `mpstthree::binary::struct_trait::send::Send<i64, mpstthree::binary::struct_trait::recv::Recv<i64, mpstthree::binary::struct_trait::recv::Recv<CalcOp2<N>, mpstthree::binary::struct_trait::end::End>>>: std::marker::Send`
  --> tests/infinite_type/fail_0.rs:29:10
   |
29 |     More(Send<i64, Recv<i64, NiceCalcServer2<N>>>),
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `CalcOp2<N>`
  --> tests/infinite_type/fail_0.rs:28:6
   |
28 | enum CalcOp2<N: marker::Send> {
   |      ^^^^^^^
   = note: required because of the requirements on the impl of `Session` for `mpstthree::binary::struct_trait::recv::Recv<CalcOp2<N>, mpstthree::binary::struct_trait::end::End>`
